--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>L~N~S ecommerce</title>
 <head>
 
-  <link rel="stylesheet" href="ecommerce.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
 
